--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,4 +1,4 @@
-logging.level.org.springframework=info
+logging.level.org.springframework=debug
 
 
 currency-service.url=http://prod.yashtojava.com
